--- a/style1.css
+++ b/style1.css
@@ -3,7 +3,7 @@
 body, html{
     height: 100%;
     margin: 0;
-    font-family: 'helvetica', Arial, sans-serif;
+    font-family: 'europa', Arial, sans-serif;
 }
 
 .bg {
@@ -24,6 +24,7 @@ body, html{
     height: 50%;
     color: white;
 }
+
 
 div.head h1 { 
     padding: 1em;
