--- a/contact.css
+++ b/contact.css
@@ -4,14 +4,42 @@ body, html{
     width:100%;
 }
 
-.line {
-    border-left: 5px solid black;
-    height: 300px;
+.flex-row {
     width: 100%;
-    left: 50%;  
-    top: 20%;
-    display:flex;
-    justify-content: center;  
-    position: relative;
-    vertical-align: middle;
+    height: 100%;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.col-md-6 {
+    width: 50%;
+    display: flex;
+}
+.flex-col {
+    flex: 1;
+    display: flex;
+}
+
+.line {
+    border-right: 1px black solid;
+}
+.links, .content{
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.links{
+    margin-left: 100px;
+}
+
+.content{
+    margin-left: 100px;
+    width: 50%;
 }
